<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
  <PreferenceCategory android:title="@string/pref_category_layout">
    <juloo.keyboard2.prefs.LayoutsPreference/>
    <PreferenceScreen android:title="@string/pref_extra_keys_title">
      <PreferenceCategory android:title="@string/pref_extra_keys_custom">
        <juloo.keyboard2.prefs.CustomExtraKeysPreference/>
      </PreferenceCategory>
      <juloo.keyboard2.prefs.ExtraKeysPreference android:title="@string/pref_extra_keys_internal"/>
    </PreferenceScreen>
    <ListPreference android:key="number_row" android:title="@string/pref_number_row_title" android:summary="%s" android:defaultValue="no_number_row" android:entries="@array/pref_show_number_row_entries" android:entryValues="@array/pref_show_number_row_values"/>
    <ListPreference android:key="show_numpad" android:title="@string/pref_show_numpad_title" android:summary="%s" android:defaultValue="1" android:entries="@array/pref_show_numpad_entries" android:entryValues="@array/pref_show_numpad_values"/>
    <ListPreference android:key="numpad_layout" android:title="@string/pref_numpad_layout" android:summary="%s" android:defaultValue="high_first" android:entries="@array/pref_numpad_layout_entries" android:entryValues="@array/pref_numpad_layout_values"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_category_typing">
    <CheckBoxPreference android:key="word_prediction_enabled" android:title="@string/pref_word_prediction_title" android:summary="@string/pref_word_prediction_summary" android:defaultValue="false"/>
    <juloo.keyboard2.prefs.IntSlideBarPreference android:key="suggestion_bar_opacity" android:title="@string/pref_suggestion_bar_opacity_title" android:summary="%s%%" android:defaultValue="90" min="0" max="100" android:dependency="word_prediction_enabled"/>
    <CheckBoxPreference android:key="swipe_typing_enabled" android:title="@string/pref_swipe_typing_title" android:summary="@string/pref_swipe_typing_summary" android:defaultValue="false"/>
    <PreferenceScreen android:key="swipe_calibration" android:title="@string/pref_swipe_calibration_title" android:summary="@string/pref_swipe_calibration_summary" android:dependency="swipe_typing_enabled"/>
    <PreferenceScreen android:key="cgr_algorithm_settings" android:title="CGR Algorithm Parameters" android:summary="Tune Continuous Gesture Recognition algorithm parameters" android:dependency="swipe_typing_enabled">
      <Preference android:key="cgr_reset_optimal" android:title="🎯 Reset to Keyboard-Optimal Values" android:summary="Use values optimized for constrained keyboard gestures (not free drawing)"/>
      <Preference android:key="cgr_reset_paper" android:title="📜 Reset to Paper Defaults" android:summary="Use original Kristensson &amp; Denby 2011 values for free drawing"/>
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="cgr_e_sigma" android:title="σₑ (E_SIGMA) - Position Tolerance" android:summary="Lower for keyboard constraints (%s)" android:defaultValue="120" min="50" max="500"/>
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="cgr_beta" android:title="β (BETA) - Variance Ratio" android:summary="Distance variance ratio (%s)" android:defaultValue="400" min="100" max="800"/>
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="cgr_lambda" android:title="λ (LAMBDA) - Distance Balance" android:summary="Higher for predictable keyboard positions (%s%%)" android:defaultValue="65" min="0" max="100"/>
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="cgr_kappa" android:title="κ (KAPPA) - End-Point Bias" android:summary="Higher for specific key positions (%s)" android:defaultValue="25" min="0" max="50"/>
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="cgr_pt_spacing" android:title="Point Spacing" android:summary="Progressive segment density (%s)" android:defaultValue="200" min="100" max="1000"/>
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="cgr_max_resampling" android:title="Max Resampling Points" android:summary="Maximum gesture complexity (%s)" android:defaultValue="5000" min="1000" max="10000"/>
    </PreferenceScreen>
    <PreferenceScreen android:key="cgr_template_settings" android:title="Template Generation Settings" android:summary="Configure QWERTY coordinate mapping and template generation" android:dependency="swipe_typing_enabled">
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="template_coord_scale" android:title="Coordinate Scale" android:summary="Template coordinate scaling factor (%s%%)" android:defaultValue="100" min="50" max="200"/>
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="template_aspect_ratio" android:title="Aspect Ratio Adjustment" android:summary="Template width/height ratio (%s%%)" android:defaultValue="100" min="70" max="150"/>
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="template_key_spacing" android:title="Key Spacing Override" android:summary="Distance between keys override (%s%%)" android:defaultValue="100" min="80" max="120"/>
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="template_normalization_strength" android:title="Normalization Strength" android:summary="Template coordinate normalization (%s%%)" android:defaultValue="100" min="0" max="200"/>
      <CheckBoxPreference android:key="template_debug_coords" android:title="Debug Coordinates" android:summary="Log template coordinates for debugging" android:defaultValue="false"/>
      <CheckBoxPreference android:key="template_regenerate_on_change" android:title="Auto-Regenerate Templates" android:summary="Automatically regenerate templates when settings change" android:defaultValue="true"/>
    </PreferenceScreen>
    <PreferenceScreen android:key="export_swipe_ml_data" android:title="@string/pref_export_swipe_ml_data_title" android:summary="@string/pref_export_swipe_ml_data_summary" android:dependency="swipe_typing_enabled"/>
    <PreferenceScreen android:key="train_swipe_ml_model" android:title="@string/pref_train_swipe_ml_title" android:summary="@string/pref_train_swipe_ml_summary" android:dependency="swipe_typing_enabled"/>
    <ListPreference android:key="swipe_dist" android:title="@string/pref_swipe_dist_title" android:summary="@string/pref_swipe_dist_summary" android:defaultValue="15" android:entries="@array/pref_swipe_dist_entries" android:entryValues="@array/pref_swipe_dist_values"/>
    <ListPreference android:key="circle_sensitivity" android:title="@string/pref_circle_sensitivity_title" android:summary="%s" android:defaultValue="2" android:entries="@array/pref_circle_sensitivity_entries" android:entryValues="@array/pref_circle_sensitivity_values"/>
    <ListPreference android:key="slider_sensitivity" android:title="@string/pref_slider_sensitivity_title" android:summary="%s" android:defaultValue="30" android:entries="@array/pref_slider_sensitivity_entries" android:entryValues="@array/pref_slider_sensitivity_values"/>
    <juloo.keyboard2.prefs.IntSlideBarPreference android:key="longpress_timeout" android:title="@string/pref_long_timeout_title" android:summary="%sms" android:defaultValue="600" min="50" max="2000"/>
    <CheckBoxPreference android:key="keyrepeat_enabled" android:title="@string/pref_keyrepeat_enabled" android:defaultValue="true"/>
    <juloo.keyboard2.prefs.IntSlideBarPreference android:key="longpress_interval" android:dependency="keyrepeat_enabled" android:title="@string/pref_long_interval_title" android:summary="%sms" android:defaultValue="25" min="5" max="100"/>
    <CheckBoxPreference android:key="lock_double_tap" android:title="@string/pref_lock_double_tap_title" android:summary="@string/pref_lock_double_tap_summary" android:defaultValue="false"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_category_behavior">
    <CheckBoxPreference android:key="autocapitalisation" android:title="@string/pref_autocapitalisation_title" android:summary="@string/pref_autocapitalisation_summary" android:defaultValue="true"/>
    <CheckBoxPreference android:key="switch_input_immediate" android:title="@string/pref_switch_input_immediate_title" android:summary="@string/pref_switch_input_immediate_summary" android:defaultValue="false"/>
    <CheckBoxPreference android:key="vibrate_custom" android:title="@string/pref_vibrate_custom" android:defaultValue="false"/>
    <juloo.keyboard2.prefs.IntSlideBarPreference android:dependency="vibrate_custom" android:key="vibrate_duration" android:title="@string/pref_vibrate_duration_title" android:summary="%sms" android:defaultValue="20" min="0" max="100"/>
    <ListPreference android:key="number_entry_layout" android:title="@string/pref_number_entry_title" android:summary="%s" android:defaultValue="pin" android:entries="@array/pref_number_entry_entries" android:entryValues="@array/pref_number_entry_values"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_category_style">
    <ListPreference android:key="theme" android:title="@string/pref_theme" android:summary="%s" android:defaultValue="system" android:entries="@array/pref_theme_entries" android:entryValues="@array/pref_theme_values"/>
    <juloo.keyboard2.prefs.IntSlideBarPreference android:key="label_brightness" android:title="@string/pref_label_brightness" android:summary="%s%%" android:defaultValue="100" min="50" max="100"/>
    <juloo.keyboard2.prefs.IntSlideBarPreference android:key="keyboard_opacity" android:title="@string/pref_keyboard_opacity" android:summary="%s%%" android:defaultValue="100" min="0" max="100"/>
    <juloo.keyboard2.prefs.IntSlideBarPreference android:key="key_opacity" android:title="@string/pref_key_opacity" android:summary="%s%%" android:defaultValue="100" min="0" max="100"/>
    <juloo.keyboard2.prefs.IntSlideBarPreference android:key="key_activated_opacity" android:title="@string/pref_key_activated_opacity" android:summary="%s%%" android:defaultValue="100" min="0" max="100"/>
    <PreferenceScreen android:title="@string/pref_margin_bottom_title">
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="margin_bottom_portrait" android:title="@string/pref_portrait" android:summary="%sdp" android:defaultValue="7" min="0" max="100"/>
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="margin_bottom_landscape" android:title="@string/pref_landscape" android:summary="%sdp" android:defaultValue="3" min="0" max="100"/>
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="margin_bottom_portrait_unfolded" android:title="@string/pref_portrait_unfolded" android:summary="%sdp" android:defaultValue="7" min="0" max="100"/>
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="margin_bottom_landscape_unfolded" android:title="@string/pref_landscape_unfolded" android:summary="%sdp" android:defaultValue="3" min="0" max="100"/>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/pref_keyboard_height_title">
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="keyboard_height" android:title="@string/pref_portrait" android:summary="%s%%" android:defaultValue="35" min="10" max="100"/>
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="keyboard_height_landscape" android:title="@string/pref_landscape" android:summary="%s%%" android:defaultValue="50" min="20" max="65"/>
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="keyboard_height_unfolded" android:title="@string/pref_portrait_unfolded" android:summary="%s%%" android:defaultValue="35" min="10" max="50"/>
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="keyboard_height_landscape_unfolded" android:title="@string/pref_landscape_unfolded" android:summary="%s%%" android:defaultValue="50" min="20" max="65"/>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/pref_horizontal_margin_title">
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="horizontal_margin_portrait" android:title="@string/pref_portrait" android:summary="%sdp" android:defaultValue="3" min="0" max="30"/>
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="horizontal_margin_landscape" android:title="@string/pref_landscape" android:summary="%sdp" android:defaultValue="28" min="0" max="200"/>
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="horizontal_margin_portrait_unfolded" android:title="@string/pref_portrait_unfolded" android:summary="%sdp" android:defaultValue="3" min="0" max="30"/>
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="horizontal_margin_landscape_unfolded" android:title="@string/pref_landscape_unfolded" android:summary="%sdp" android:defaultValue="28" min="0" max="200"/>
    </PreferenceScreen>
    <juloo.keyboard2.prefs.SlideBarPreference android:key="character_size" android:title="@string/pref_character_size_title" android:summary="@string/pref_character_size_summary" android:defaultValue="1.15" min="0.75" max="1.5"/>
    <juloo.keyboard2.prefs.SlideBarPreference android:key="key_vertical_margin" android:title="@string/pref_key_vertical_space" android:summary="%s%%" android:defaultValue="1.5" min="0" max="5"/>
    <juloo.keyboard2.prefs.SlideBarPreference android:key="key_horizontal_margin" android:title="@string/pref_key_horizontal_space" android:summary="%s%%" android:defaultValue="2" min="0" max="5"/>
    <CheckBoxPreference android:key="border_config" android:title="@string/pref_border_config_title" android:defaultValue="false"/>
    <juloo.keyboard2.prefs.IntSlideBarPreference android:key="custom_border_radius" android:title="@string/pref_corners_radius_title" android:summary="%s%%" android:defaultValue="0" min="0" max="100" android:dependency="border_config"/>
    <juloo.keyboard2.prefs.SlideBarPreference android:key="custom_border_line_width" android:title="@string/pref_border_width_title" android:summary="%sdp" android:defaultValue="0" min="0" max="5" android:dependency="border_config"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_category_clipboard">
    <CheckBoxPreference android:key="clipboard_history_enabled" android:title="@string/pref_clipboard_history_enabled_title" android:summary="@string/pref_clipboard_history_enabled_summary" android:defaultValue="false"/>
    <ListPreference android:key="clipboard_history_limit" android:title="@string/pref_clipboard_history_limit_title" android:summary="@string/pref_clipboard_history_limit_summary" android:dependency="clipboard_history_enabled" android:defaultValue="6" android:entries="@array/pref_clipboard_history_limit_entries" android:entryValues="@array/pref_clipboard_history_limit_values"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="Swipe ML Data">
    <Preference android:key="export_swipe_ml_data" android:title="Export ML Data" android:summary="Export collected swipe data for training"/>
    <Preference android:key="import_swipe_ml_data" android:title="Import ML Data" android:summary="Import swipe data from file"/>
    <Preference android:key="train_swipe_ml_model" android:title="Train ML Model" android:summary="Train swipe prediction model"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="About">
    <Preference android:key="version_info" android:title="Version Info" android:summary="Loading version info..."/>
    <Preference android:key="update_app" android:title="Install Update" android:summary="Install update from /sdcard/unexpected/debug-kb.apk"/>
  </PreferenceCategory>
</PreferenceScreen>
